sumo/tests/traci/StopNode/InvalidNode/errors.traci
Answered with error to command 18: Can not retrieve node with given ID
Error while receiving command: tcpip::Socket::receive() @ recv: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
